# PhonoLex

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  netlify.toml  pyproject.toml  requirements.txt
.claude/agents/: api-endpoint-developer.md  data-pipeline-builder.md  database-migrator.md  model-trainer.md  phonology-tester.md  ux-frontend-architect.md
.github/workflows/: ci.yml
archive/: IDEA.md  README.md  SUMMARY.md  models.py  pyproject.toml  requirements.txt  seqrule_example.py
archive/data/processed/: phoneme_features.json  phoneme_features_full.json  phoneme_vectors.json  phoneme_vectors_full.json
archive/data/scripts/: check_vectors.py  create_dataset.py  create_wordnet_dataset.py  examine_dataset.py  extract_english_features.py  filter_gold_standard.py  filter_supported_phonemes.py  inspect_data.py  missing_phonemes.py  phoneme_mappings.py  phonolex_pipeline.py  pipeline.py  process_cmu.py  run_pipeline.py  run_processing.py
archive/docs/: ARCHIVE_PLAN.md  CLEANUP_PLAN.md  CORRECTED_V2_STATUS.md  EDIT_DISTANCE_OPTIMIZATION.md  HIERARCHICAL_SIMILARITY_OPTIMIZATION.md  NORMALIZATION_ANALYSIS.md  ROOT_CLEANUP_PLAN.md  V2_COMPLETE_SUMMARY.md  V2_FINAL_STATUS.md  V2_FIXES_SUMMARY.md  VECTOR_ENCODING_STRATEGIES.md
archive/docs/development/: CURRICULUM_LEARNING_RESULTS.md  FINAL_MODEL.md  IMPROVEMENTS.md  PHONEME_EMBEDDINGS_FRAMEWORK.md  PROJECT_PLAN.md  REUSABLE_COMPONENTS.md  SESSION_SUMMARY.md
archive/docs/research/: CROSS_PAPER_SYNTHESIS.md  KEY_PAPERS_TO_DOWNLOAD.md  RESEARCH_SYNTHESIS.md
archive/examples/: api_client.py  phonological_rules.py
archive/experiments_old/: evaluate_contextual_embeddings.py  evaluate_multitask.py  gridsearch_phonology_bert.py  position_aware_word_embeddings.py  test_embeddings.py
archive/models/phoneme_embeddings/: phoneme_vocab.json  training_history.json
archive/outputs_old/evaluation/: results.json
archive/scripts/: run_api.py  run_examples.py
archive/src/phonolex/: __init__.py  patterns.py
archive/src/phonolex/api/: __init__.py  server.py
archive/src/phonolex/rules/: __init__.py  base.py  features.py  phonological.py  phonology.py
archive/training_scripts_old/: README.md  train_contextual_phoneme_embeddings.py  train_curriculum.py  train_curriculum_fixed.py  train_curriculum_phases34.py  train_english.py  train_english_multitask.py  train_hierarchical_final.py  train_mlm_only.py  train_phonology_bert_v2.py  train_sequential_all_datasets.py  train_sequential_cmu_ipadict.py  train_sequential_final.py  train_syllable_aware_proper.py  train_word_embeddings.py  train_word_embeddings_mps.py  train_word_embeddings_sequential.py  train_word_embeddings_skipgram.py
archive/web/: README.md
archive/web/src/components/PatternBuilder/: README.md
archive/webapp_v1/backend/: main_v1_deprecated.py  test_api.py
archive/webapp_v2_backend/: DEPLOYMENT.md  README.md  __init__.py  main.py  models.py  pytest.ini  requirements.txt  run_tests.sh  setup_test_env.sh  start.sh
archive/webapp_v2_backend/docs/: README.md  TESTING_COMPLETE.md  TEST_STATUS.md  TEST_SUCCESS.md
archive/webapp_v2_backend/frontend_api/: README.md  phonolexApi.backend.ts
archive/webapp_v2_backend/migrations/: 002_add_syllable_embeddings_array.sql  003_create_syllables_table.sql  __init__.py  cleanup_unfiltered_words.py  populate_edges.py  populate_norms.py  populate_syllables.py  populate_typed_edges.py  populate_word_syllable_arrays.py  populate_words.py  word_filter.py
archive/webapp_v2_backend/routers/: __init__.py  similarity.py
data/: README.md  phonolex_clinical_database.metadata.json  phonological_graph.metadata.json
data/learning_datasets/: analyze_datasets.py
data/mappings/: README.md  arpa_to_ipa.json  ipa_to_arpa.json  phoneme_vectorizer.py  sample_vectors.json
data/norms/: cognitive_graph_v7.metadata.json
data/phoible/english/: README.md
docs/: ARCHITECTURE_V2.md  CLIENT_SIDE_DATA_PACKAGE.md  DEPLOYMENT.md  EMBEDDINGS_ARCHITECTURE.md  INDEX.md  MIGRATION_TO_CLIENT_SIDE.md  TRAINING_SCRIPTS_SUMMARY.md  VOCABULARY_FILTERING.md
docs/development/: FRONTEND_UPDATE_PLAN.md  FRONTEND_V2_MIGRATION_GUIDE.md  LEARNING_DATASETS.md  PROJECT_REORGANIZATION_2025.md  UI_IMPROVEMENTS_PROPOSAL.md
docs/webapp/backend/: QUICK_START_TESTING.md  STARTUP.md  V2_IMPLEMENTATION_STATUS.md
docs/webapp/frontend/: FRONTEND_COMPLETE.md  RELEASE_NOTES_v2.0.md  UX_ACCESSIBILITY_REPORT.md
python/: README.md  pyproject.toml
scripts/: README.md  analyze_norm_filtering.py  build_filtered_layer4_embeddings.py  build_layer4_syllable_embeddings.py  compute_layer1_phoible_features.py  compute_layer2_normalized_vectors.py  export_clientside_data.py  export_clientside_simple.py  export_phoneme_data.py  load_quantized_embeddings.py  quantize_embeddings.py  train_layer3_contextual_embeddings.py
src/phonolex/: build_phonological_graph.py  word_filter.py
src/phonolex/embeddings/: README.md  data_loader.py  english_data_loader.py  evaluate.py  model.py  train.py  word_embeddings.py
src/phonolex/models/: phonolex_bert.py
src/phonolex/utils/: extract_psycholinguistic_norms.py  syllabification.py
webapp/backend/: .env.example  __init__.py  database.py
webapp/backend/migrations/: 001_create_schema.sql  populate_embeddings.py  populate_phonemes.py  populate_typed_edges_simple.py  populate_words.py
webapp/backend/routers/: graph.py  phonemes.py  words.py
webapp/backend/tests/: __init__.py
webapp/frontend/: .eslintrc.cjs  .gitignore  TEST_README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
webapp/frontend/e2e/: builder-exclusions.spec.ts  minimal-pairs-position.spec.ts
webapp/frontend/playwright-report/: index.html
webapp/frontend/public/: manifest.json
webapp/frontend/public/data/: manifest.json  phonemes.json
webapp/frontend/src/: App_new.tsx  main.tsx
webapp/frontend/src/_legacy/: App.tsx  PatternBuilder.tsx  WordResults.tsx  api.ts  useFilterStore.ts
webapp/frontend/src/components/: AppHeader.tsx  Builder.tsx  Compare.tsx  (+8 more)
webapp/frontend/test-results/: .last-run.json
(+17 files in other folders)
