[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phonolex"
version = "0.1.0"
description = "A phonological lexicon with vector-based representation for phoneme features"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    {name = "PhonoLex Team"},
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "nltk>=3.6.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "seqrule>=1.0.0b1.post1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.230",
]

[tool.hatch.build.targets.wheel]
packages = ["src/phonolex"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"] 